--- a/test1_chart.html
+++ b/test1_chart.html
@@ -1,4 +1,4 @@
-
+<script src="https://cdn.jsdelivr.net/npm/chart.js@3.5.0/dist/chart.min.js" integrity="sha256-yz7K02nILYEeRDwEfzu/1zI9SpBKod/nLYMTFh7vszs=" crossorigin="anonymous"></script>
 
 <canvas id="myChart" width="400" height="400"></canvas>
 <script>
